# hydra-chess

./: 2023-experience-report.md  README.md  cabal.project  layer1.dot  transactions.dot  tx.raw.GqT8hU.signed
chess-client/: chess-client.cabal
chess-client/src/Game/: Chess.hs  Client.hs  Server.hs
chess-client/src/Game/Client/: Console.hs  IO.hs
chess-client/test/Game/Client/: ConsoleSpec.hs
chess-core/: chess-core.cabal
chess-core/golden/: Game.json
chess-core/src/Chess/: Contract.hs  Data.hs  ELO.hs  Game.hs  GameState.hs  Generators.hs  Parse.hs  Plutus.hs  Render.hs
chess-core/src/Chess/Elo/: Score.hs
chess-core/test/Chess/: GameSpec.hs  ParseSpec.hs
chess-core/test/Chess/Elo/: ScoreSpec.hs
chess-core/test/Chess/Game/: Castling.hs  Utils.hs
chess-hydra/: chess-hydra.cabal
chess-hydra/src/Games/: Logging.hs  Options.hs  Run.hs  Terminal.hs
chess-hydra/src/Games/Cardano/: Crypto.hs  Network.hs
chess-hydra/src/Games/Run/: Cardano.hs  Hydra.hs
chess-hydra/src/Games/Server/: Hydra.hs  IO.hs
hydra-chess/: hydra-chess.cabal
hydra-chess/app/: chess-admin.hs
hydra-chess/src/Games/: Logging.hs  Run.hs  Terminal.hs
hydra-chess/src/Games/Cardano/: Network.hs
hydra-chess/src/Games/Run/: Cardano.hs  Hydra.hs
hydra-chess/src/Games/Server/: Hydra.hs  JSON.hs
hydra-chess/src/Games/Server/Hydra/: Command.hs
hydra-chess/test/Games/Server/: HydraSpec.hs
