cabal-version: 2.4
name:          chess-core
version:       0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:        Arnaud Bailly
maintainer:    arnaud.bailly@iohk.io

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

common project-config
  default-language:   GHC2021
  default-extensions:
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DerivingStrategies
    DuplicateRecordFields
    FunctionalDependencies
    GADTs
    LambdaCase
    MultiWayIf
    OverloadedStrings
    PartialTypeSignatures
    PatternSynonyms
    TypeFamilies
    ViewPatterns

  ghc-options:
    -Wall -Werror -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints
    -fprint-potential-instances -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas -fno-strictness

library
  import:          project-config
  hs-source-dirs:  src
  exposed-modules:
    Chess
    Chess.Contract
    Chess.Data
    Chess.ELO
    Chess.Elo.Score
    Chess.Game
    Chess.GameState
    Chess.Generators
    Chess.Parse
    Chess.Plutus
    Chess.Render
    Chess.Token

  build-depends:
    , aeson
    , base
    , base16-bytestring
    , bytestring
    , cardano-binary
    , cryptonite
    , exceptions
    , memory
    , mtl
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin
    , QuickCheck
    , random
    , scientific
    , serialise
    , template-haskell
    , text
    , vector

executable chess
  main-is:          chess-cli.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , base
    , chess-core

  hs-source-dirs:   app
  default-language: Haskell2010

test-suite tests
  import:             project-config
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:     test
  other-modules:
    Chess.DataSpec
    Chess.Elo.ScoreSpec
    Chess.Game.Castling
    Chess.Game.Utils
    Chess.GameSpec
    Chess.GoldenSpec
    Chess.ParseSpec

  main-is:            Spec.hs
  type:               exitcode-stdio-1.0
  build-depends:
    , aeson
    , base
    , chess-core
    , containers
    , hspec
    , hspec-core
    , hspec-golden-aeson
    , mtl
    , QuickCheck
    , random
    , text

  build-tool-depends: hspec-discover:hspec-discover
